--- a/about.html
+++ b/about.html
@@ -501,7 +501,7 @@ p { margin: 0; }
 <div id="spoiler3" class="spoiler-area3 is-closed3">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
-<font color="#8e7d7d" style="font-size:9px; letter-spacing:0.5px;">( she / her )</font>
+<font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( she / her )</font>
 
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
