--- a/about.html
+++ b/about.html
@@ -458,7 +458,7 @@ z-index: 3;
 <center>
 <div style="line-height:30px">
 
-<div id="spoiler2" class="spoiler-area2 is-closed2">
+<div id="spoiler2" class="spoiler-area2 is-closed2" style="margin-top:2px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( august . 11 . 1997 )</font>
@@ -498,7 +498,7 @@ p { margin: 0; }
 }());
 </script>
 
-<div id="spoiler3" class="spoiler-area3 is-closed3">
+<div id="spoiler3" class="spoiler-area3 is-closed3" style="margin-top:-6px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( she / her )</font>
@@ -538,7 +538,7 @@ p { margin: 0; }
 }());
 </script>
 
-<div id="spoiler4" class="spoiler-area4 is-closed4">
+<div id="spoiler4" class="spoiler-area4 is-closed4" style="margin-top:-7px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( in a countryside small town )</font>
@@ -578,7 +578,7 @@ p { margin: 0; }
 }());
 </script>
 
-<div id="spoiler1" class="spoiler-area is-closed">
+<div id="spoiler1" class="spoiler-area is-closed" style="margin-top:-16px;">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
 <img width="350" height="auto" src="https://i.imgur.com/3v4WYXw.png"/>
@@ -622,7 +622,7 @@ p { margin: 0; }
 
 </center>
 
-
+<br>
 <center><font color="#efcfc6"><font style="font-size:11px">♡</font> </font><font color="#8e7d7d">꒰﻿</font><font color="#efcfc6">〃</font>﻿<font color="#8e7d7d">´˘`﻿</font><font color="#efcfc6">〃﻿ </font><font color="#a59490">bubu , fairies , softness , roll cake</font><br>
 <font color="#bca9a4">﻿﻿!! </font><font color="#8e7d7d">꒰</font><font color="#efcfc6">〃﻿﻿</font><font color="#8e7d7d">`ˆ´</font><font color="#efcfc6">〃﻿ </font><font color="#bca9a4">loud noises , mean people</font><br></center>
 <br>
@@ -633,13 +633,12 @@ i'm a housewife, healer & artisan graduated in game design ; i love to write, cr
 <br><br><br>
 <font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7;" href="https://middlepot.com/faq">faq</a>
 <br><br><br><br>
-<center><img style="position:absolute; left:-20px;" src="https://i.imgur.com/K9TlvCe.png"/></center></div>
+<center><img style="position:absolute; left:-20px; padding-bottom:10px;" src="https://i.imgur.com/K9TlvCe.png"/></center></div>
 <br><br>
 </div>
 </div>
 
 </div>
-
 
 </div>
 
