--- a/pupe/11.html
+++ b/pupe/11.html
@@ -207,14 +207,14 @@ menuuuuuuuuuuuuuuu
 -->
 
 <font color="#a37c81" style="position:absolute; left:42px; font-size:8px;">
-<sub><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/h3xaKrE.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
+<sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://i.imgur.com/DwBNGaX.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf11.png">
 
-<div style="position:absolute; top:5px; left:135px; overflow:hidden; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
+<div style="position:absolute; top:5px; left:135px; overflow:hidden; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://i.imgur.com/LcZQr1Z.png"></sub></sub></sub></sub> ‌ <b>teddy girl coord</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf11+.png"></sub></sub></sub></sub> ‌ <b>teddy girl coord</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Heart effect/11BJ<br>
@@ -243,9 +243,10 @@ menuuuuuuuuuuuuuuu
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
 <a href="https://file.pooftie.me/pupe/teddy%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/10"><font color="#b08087">← previous outfit</font></a>
+<a href="/pupe/10"><font color="#b08087">← previous outfit</font></a><br>
+<a href="/pupe/12"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
