--- a/pupe/12.html
+++ b/pupe/12.html
@@ -210,41 +210,44 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf9.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf12.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf9+.png"></sub></sub></sub> ‌ <b>floral maturity</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf12+.png"></sub></sub></sub></sub> ‌ <b>cute tea party</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Heart effect/11BJ<br>
-‌ • Princess's Umbrella/12HJ<br>
-‌ • White Flowers/wh12IJ<br>
-‌ • Japanses sandals-Butterfly/12LJ<br>
+‌ • Bear retro suitcase/bg12CJ<br>
 ‌ • Mascara/001<br>
+‌ • Chiffon blouse/12GJ<br>
+‌ • Cork sole shoes/wh12GJ<br>
 ‌ • Hair glitter/12KJ<br>
+‌ • Lady-like Lace Collar/wh12IJ<br>
 ‌ • Decolletage beaty cream/11KJ<br>
+‌ • Bunny and Toy Box/wh12JJ<br>
+‌ • Lace flower socks/11H<br>
 ‌ • Dolly long05/12DJ<br>
-‌ • Japanese socks/wh12L<br>
-‌ • Glitteringly mat effect/11EJ<br>
-‌ • Bride hair accessory/12F<br>
+‌ • Puff sleeved blouse/12F<br>
 ‌ • Brilliantlyglitteringly effect/11BJ<br>
-‌ • Kimono-wisteria/12LJ<br>
+‌ • Tea set and cake/12IJ<br>
+‌ • Antique lace barrette/12F<br>
 ‌ • Bridal inner for dress/13F<br>
+‌ • Sweet heart effect/11KJ<br>
+‌ • Soft heart effect/12BJ<br>
+‌ • Antique skirt/12F<br>
 ‌ • Color contact lens 009<br>
-‌ • Princess effect/12KJ<br>
-‌ • Sash-Double ribbons/pk12LJ<br>
 ‌ • Eye glitter/11KJ<br>
+‌ • Lace half pants/wh12CJ<br>
 ‌ • Tiara marriage ring/13F<br>
 ‌ • Blush 007<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/floral%20maturity.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/8"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/10"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/cute%20tea%20party.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/11"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
