--- a/pupe/1.html
+++ b/pupe/1.html
@@ -207,14 +207,14 @@ menuuuuuuuuuuuuuuu
 -->
 
 <font color="#a37c81" style="position:absolute; left:42px; font-size:8px;">
-<sub><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/h3xaKrE.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
+<sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://i.imgur.com/LO8G9rz.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf2.png">
 
-<div style="position:absolute; top:5px; left:135px; overflow:hidden; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px;">
+<div style="position:absolute; top:5px; left:135px; overflow:hidden; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/3ICBgl6.png"></sub></sub></sub> ‌ <b>delicate pastoral</b><br></font>
+<sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/puf2+.png"></sub></sub></sub> ‌ <b>delicate pastoral</b><br></font>
 <div style="border: none; width: 110px; height: 150px; margin-top:6px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
  • Layered long dress/br12HJ<br>
