--- a/pupe/6.html
+++ b/pupe/6.html
@@ -212,7 +212,7 @@ menuuuuuuuuuuuuuuu
 
 <img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf6.png">
 
-<div style="position:absolute; top:5px; left:135px; overflow:hidden; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
+<div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
 <sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf6+.png"></sub></sub></sub> ‌‌ ‌<b>innocent lady</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
